<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray"
    android:fillViewport="true"
    tools:context=".presentation.tabs.QuoteFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="746dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/quotation_generator"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerColor="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"

                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/paint_area_m_2"
                        android:textColor="@color/black" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.2"
                        app:cardBackgroundColor="#7CD3D5D5"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPaint"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="@string/_0"
                            android:inputType="numberDecimal"
                            android:textAlignment="center" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="0.5"

                        android:text="@string/m_2"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:text="@string/types_of_paint"
                        android:textColor="@color/black" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.8"
                        app:cardBackgroundColor="#7CD3D5D5"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp">

                        <Spinner
                            android:id="@+id/spinner_type_of_paint"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginHorizontal="8dp"

                            android:gravity="center" />

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/spinner_type_color"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/color_of_paint"
                        android:textColor="@color/black" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.2"
                        app:cardBackgroundColor="#7CD3D5D5"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp">

                        <Spinner
                            android:id="@+id/spinner_color"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:entries="@array/color_array"
                            android:gravity="center"
                            android:textAlignment="center" />

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"

                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/time_required"
                        android:textColor="@color/black" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1.2"
                        app:cardBackgroundColor="#7CD3D5D5"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etTimeRequired"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="0"
                            android:inputType="number"
                            android:textAlignment="center" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="0.8"

                        android:text="@string/days"
                        android:textColor="@color/black" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center_vertical"

                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Surface Preparation Multiplier"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/seekBar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:stepSize="1"
                        android:value="1"
                        android:valueFrom="1"
                        android:valueTo="5" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1.2"
                    app:cardBackgroundColor="#7CD3D5D5"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:gravity="center_vertical|center"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPercentage"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"

                            android:layout_gravity="center"
                            android:backgroundTint="@android:color/transparent"
                            android:inputType="number"
                            android:text="100"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:text="%"
                            android:textSize="16sp" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <!--                <LinearLayout-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginHorizontal="16dp"-->
                <!--                    android:layout_marginTop="20dp"-->
                <!--                    android:gravity="center_vertical"-->

                <!--                    android:weightSum="2">-->

                <!--                    <TextView-->
                <!--                        android:layout_width="0dp"-->
                <!--                        android:layout_height="wrap_content"-->

                <!--                        android:layout_weight="1"-->
                <!--                        android:text="@string/level_of_surface_preperation"-->
                <!--                        android:textColor="@color/black" />-->


                <!--                    <com.google.android.material.slider.Slider-->
                <!--                        android:id="@+id/seekBar"-->
                <!--                        android:layout_width="0dp"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:layout_weight="1"-->

                <!--                        android:stepSize="1"-->
                <!--                        android:value="3"-->

                <!--                        android:valueFrom="1"-->
                <!--                        android:valueTo="5" />-->


                <!--                </LinearLayout>-->

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnGenerate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:letterSpacing="0.07"
                    android:padding="16dp"
                    android:text="Generate Quote"
                    app:cornerRadius="8dp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/gray"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvTotalPaintCost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvTotalLabourCost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text=""
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvSurfacePercentage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text=""
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvCost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNotHired"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#F80C0C"
                    android:padding="14dp"
                    android:text="Not Hired"
                    android:textColor="@color/black"
                    android:textSize="16sp"

                    app:cornerRadius="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnHired"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#3AEF41"
                    android:padding="14dp"
                    android:text="Hired"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:cornerRadius="8dp"

                    />


            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</ScrollView>